<resources>
    <string name="app_name">calculator_leosala</string>
    <string name="one">One (1)</string>
    <string name="two">Two (2)</string>
    <string name="three">Three (3)</string>
    <string name="four">Four (4)</string>
    <string name="five">Five (5)</string>
    <string name="six">Six (6)</string>
    <string name="seven">Seven (7)</string>
    <string name="eight">Eight (8)</string>
    <string name="nine">Nine (9)</string>
    <string name="zero">zero (0)</string>
    <string name="plus">Plus (+)</string>
    <string name="equal">Equal (=)</string>
</resources>
